@@ -5,6 +5,7 @@
   * Checking the name of accessors to ensure it does not conflict with an existing druid method name
   * Added support for dynamically finding elements inside iframes
   * Reverted the method name check due to unintended consequences
+  * Added support to use multiple identifiers when locating nested frames / iframes
 === 2017-01-20
 * Enhancements
   * Super called when factory method invoked with non Druid class
